--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -45,10 +45,10 @@ jobs:
         run: |
           printf 'GOOGLE_ANALYTICS<<EOF\n%s\nEOF\n' "$GOOGLE_SERVICES_JSON" >> $GITHUB_ENV
 
-      - name: Build debug APK
+      - name: Build Debug APK
         run: ./gradlew assembleDebug --warning-mode all
           
-      - name: Upload debug APK
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v3
         with:
           name: Android Code Editor Debug Apk
